unpackaged/main/default/objects/Quote/fields/Account_AgentKey__c.field-meta.xml
<CustomField>
    <fullName>Account_AgentKey__c</fullName>
    <formula>Opportunity.Account.AgentKey__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account AgentKey</label>
    <type>Text</type>
</CustomField>