unpackaged/main/default/objects/Quote/fields/Account_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone__c</fullName>
    <label>Account Phone</label>
    <type>Phone</type>
</CustomField>