unpackaged/main/default/objects/Quote/fields/Agent_Accepted_Time__c.field-meta.xml
<CustomField>
    <fullName>Agent_Accepted_Time__c</fullName>
    <label>Agent Accepted Time</label>
    <type>DateTime</type>
</CustomField>