unpackaged/main/default/objects/Quote/fields/Allowed_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Payment_Type__c</fullName>
    <label>Allowed Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Online only</fullName>
            </value>
            <value>
                <fullName>Offline only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>