unpackaged/main/default/objects/Quote/fields/Approval_Requester_Comment__c.field-meta.xml
<CustomField>
    <fullName>Approval_Requester_Comment__c</fullName>
    <label>Approval Requester Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>