unpackaged/main/default/objects/Quote/fields/Approval_Selector__c.field-meta.xml
<CustomField>
    <fullName>Approval_Selector__c</fullName>
    <label>Approval Selector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
                <default>true</default>
                <label>Primary</label>
            </value>
            <value>
                <fullName>Deputy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>