unpackaged/main/default/objects/Quote/fields/Auto_Approved_Quote__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approved_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox indicates either it is applicable for auto approval or not, PGAUTO-5149</description>
    <label>Auto Approved Quote</label>
    <type>Checkbox</type>
</CustomField>