unpackaged/main/default/objects/Quote/fields/billing_OMC_Approved__c.field-meta.xml
<CustomField>
    <fullName>billing_OMC_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>billing OMC Approved</label>
    <type>Checkbox</type>
</CustomField>