unpackaged/main/default/objects/Quote/fields/Branch_ID__c.field-meta.xml
<CustomField>
    <fullName>Branch_ID__c</fullName>
    <label>Branch ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>