unpackaged/main/default/objects/Quote/fields/CEA_Action_Message__c.field-meta.xml
<CustomField>
    <fullName>CEA_Action_Message__c</fullName>
    <description>Stores response message when CEA details are verified.</description>
    <label>CEA Action Message</label>
    <type>TextArea</type>
</CustomField>