unpackaged/main/default/objects/Quote/fields/CEACheckEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>CEACheckEmailTemplate__c</fullName>
    <description>set value to [CEA] when quote&#39;s agent skipped CEA check</description>
    <formula>if(Country__c=&#39;Singapore&#39; &amp;&amp; Is_Agent_license_verified__c =false,&#39;[CEA]&#39;,&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CEACheckEmailTemplate</label>
    <type>Text</type>
</CustomField>