unpackaged/main/default/objects/Quote/fields/Celigo_Account__c.field-meta.xml
<CustomField>
    <fullName>Celigo_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Account)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>