unpackaged/main/default/objects/Quote/fields/Count_of_First_Timer_Promotion_new__c.field-meta.xml
<CustomField>
    <fullName>Count_of_First_Timer_Promotion_new__c</fullName>
    <label>Count of First Timer Promotion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>