unpackaged/main/default/objects/Quote/fields/Count_of_Subscription_Item__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Subscription_Item__c</fullName>
    <label>Count of Subscription Item</label>
    <summaryFilterItems>
        <field>QuoteLineItem.Product_Category__c</field>
        <operation>equals</operation>
        <value>Subscription</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>