unpackaged/main/default/objects/Quote/fields/Create_NS_Customer__c.field-meta.xml
<CustomField>
    <fullName>Create_NS_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create NS Customer</label>
    <type>Checkbox</type>
</CustomField>