unpackaged/main/default/objects/Quote/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <label>CreatedDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>