unpackaged/main/default/objects/Quote/fields/Customer_PO_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_No__c</fullName>
    <label>Customer PO No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>