unpackaged/main/default/objects/Quote/fields/Discount_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Discount_Remarks__c</fullName>
    <inlineHelpText>For S/O contract</inlineHelpText>
    <label>Discount Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>