unpackaged/main/default/objects/Quote/fields/EPT_Product_Max_Discount__c.field-meta.xml
<CustomField>
    <fullName>EPT_Product_Max_Discount__c</fullName>
    <label>EPT Product Max Discount</label>
    <summaryFilterItems>
        <field>QuoteLineItem.Product_Type__c</field>
        <operation>equals</operation>
        <value>EPT</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>