unpackaged/main/default/objects/Quote/fields/Events_Product_Max_Discount__c.field-meta.xml
<CustomField>
    <fullName>Events_Product_Max_Discount__c</fullName>
    <label>Events Product Max Discount</label>
    <summarizedField>QuoteLineItem.Discount__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Product_Type__c</field>
        <operation>equals</operation>
        <value>Events</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>