unpackaged/main/default/objects/Quote/fields/Floor_Price_Type__c.field-meta.xml
<CustomField>
    <fullName>Floor_Price_Type__c</fullName>
    <description>Used to identify approvers for ad/ prime credit discount approval</description>
    <label>Floor Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Above Floor Price</fullName>
            </value>
            <value>
                <fullName>Below Floor Price</fullName>
            </value>
            <value>
                <fullName>Below List Price</fullName>
            </value>
            <value>
                <fullName>Below List Price with Discount</fullName>
            </value>
            <value>
                <fullName>Between Floor Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>