unpackaged/main/default/objects/Quote/fields/FOC_Approved__c.field-meta.xml
<CustomField>
    <fullName>FOC_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FOC Approved</label>
    <type>Checkbox</type>
</CustomField>