unpackaged/main/default/objects/Quote/fields/Guruland_Link_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Guruland_Link_Expiry_Date__c</fullName>
    <formula>IF(Country__c=&quot;Singapore&quot; &amp;&amp; ISPICKVAL(Quote_Type__c, &#39;B2C - Renewal&#39;) ,SG_Payment_Link_Expiry__c,
			Guruland_Link_Created_Date__c +
IF(Country__c=&quot;Singapore&quot;, $CustomMetadata.Country_Attribute__mdt.Singapore.Expired_Hours__c/24,
IF(Country__c=&quot;Malaysia&quot;, $CustomMetadata.Country_Attribute__mdt.Malaysia.Expired_Hours__c/24,
IF(Country__c=&quot;Thailand&quot;, $CustomMetadata.Country_Attribute__mdt.Thailand.Expired_Hours__c/24,
IF(Country__c=&quot;Indonesia&quot;, $CustomMetadata.Country_Attribute__mdt.Indonesia.Expired_Hours__c/24, 0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guruland Link Expiry Date</label>
    <type>DateTime</type>
</CustomField>