unpackaged/main/default/objects/Quote/fields/Handling_Cost__c.field-meta.xml
<CustomField>
    <fullName>Handling_Cost__c</fullName>
    <label>Handling Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>