unpackaged/main/default/objects/Quote/fields/Hash_Code__c.field-meta.xml
<CustomField>
    <fullName>Hash_Code__c</fullName>
    <label>Hash Code</label>
    <type>TextArea</type>
</CustomField>