unpackaged/main/default/objects/Quote/fields/Is_Agent_license_verified__c.field-meta.xml
<CustomField>
    <fullName>Is_Agent_license_verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set value to true when quote&#39;s agent successfully pass CEA check</description>
    <label>Is Agent license verified?</label>
    <type>Checkbox</type>
</CustomField>