unpackaged/main/default/objects/Quote/fields/Is_Current_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Current Subscription</label>
    <type>Checkbox</type>
</CustomField>