unpackaged/main/default/objects/Quote/fields/IsClone__c.field-meta.xml
<CustomField>
    <fullName>IsClone__c</fullName>
    <label>IsClone</label>
    <length>3</length>
    <type>Text</type>
</CustomField>