unpackaged/main/default/objects/Quote/fields/Last_Outbound_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Outbound_Sync__c</fullName>
    <label>Last Outbound Sync</label>
    <type>DateTime</type>
</CustomField>