unpackaged/main/default/objects/Quote/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Payment</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Transacted via Self-Serve</fullName>
            </value>
            <value>
                <fullName>Unable to reach (at least 5 attempts)</fullName>
            </value>
            <value>
                <fullName>Already Renewed/Purchased/Registered/Bosted</fullName>
            </value>
            <value>
                <fullName>Already Renewed - VIP</fullName>
            </value>
            <value>
                <fullName>Payment Expired</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product Features</fullName>
            </value>
            <value>
                <fullName>Project Abandoned</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>DO NOT CALL list</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Duplicate Record</fullName>
            </value>
            <value>
                <fullName>Agent is suspended or cancelled</fullName>
            </value>
            <value>
                <fullName>Expired Proposal</fullName>
            </value>
            <value>
                <fullName>Expired Offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>