unpackaged/main/default/objects/Quote/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <inlineHelpText>For internal</inlineHelpText>
    <label>Memo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>