unpackaged/main/default/objects/Quote/fields/Months_Included__c.field-meta.xml
<CustomField>
    <fullName>Months_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Months Included</label>
    <type>Checkbox</type>
</CustomField>