unpackaged/main/default/objects/Quote/fields/NetSuite_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Sync_Error__c</fullName>
    <label>NetSuite Sync Error</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>