unpackaged/main/default/objects/Quote/fields/Offline_payment_Opted__c.field-meta.xml
<CustomField>
    <fullName>Offline_payment_Opted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offline payment Opted</label>
    <type>Checkbox</type>
</CustomField>