unpackaged/main/default/objects/Quote/fields/OMC_Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>OMC_Rejected_Reason__c</fullName>
    <label>OMC Rejected Reason</label>
    <type>TextArea</type>
</CustomField>