unpackaged/main/default/objects/Quote/fields/OMC_Submitted_Time__c.field-meta.xml
<CustomField>
    <fullName>OMC_Submitted_Time__c</fullName>
    <label>OMC Submitted Time</label>
    <type>DateTime</type>
</CustomField>