unpackaged/main/default/objects/Quote/fields/Opp_Link__c.field-meta.xml
<CustomField>
    <fullName>Opp_Link__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_260))+Opp_Long_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Link</label>
    <type>Text</type>
</CustomField>