unpackaged/main/default/objects/Quote/fields/Opp_Long_ID__c.field-meta.xml
<CustomField>
    <fullName>Opp_Long_ID__c</fullName>
    <formula>CASESAFEID(Opportunity.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Long ID</label>
    <type>Text</type>
</CustomField>