unpackaged/main/default/objects/Quote/fields/Opp_Quote_Ref_num__c.field-meta.xml
<CustomField>
    <fullName>Opp_Quote_Ref_num__c</fullName>
    <formula>SUBSTITUTE( Opportunity.Opportunity_Number__c, &#39;PGSO-&#39;, &#39;&#39;)+&#39;-&#39;+ Quote_Number__c</formula>
    <label>Opp Quote Ref num</label>
    <type>Text</type>
</CustomField>