unpackaged/main/default/objects/Quote/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <displayFormat>PGSO-{YY}{000000}</displayFormat>
    <label>Opportunity Number</label>
    <type>AutoNumber</type>
</CustomField>