unpackaged/main/default/objects/Quote/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <description>Copy from Oppty Order_Date__c</description>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>