unpackaged/main/default/objects/Quote/fields/Outbound_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Sync_Error__c</fullName>
    <label>Outbound Sync Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>