unpackaged/main/default/objects/Quote/fields/Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link__c</fullName>
    <label>Payment Link</label>
    <type>Url</type>
</CustomField>