unpackaged/main/default/objects/Quote/fields/Payment_Next_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Next_Reminder_Date__c</fullName>
    <description>Stores the date to send the email every 3rd day from payment link created date as per PGAUTO- 5138</description>
    <label>Payment Next Reminder Date</label>
    <type>DateTime</type>
</CustomField>