unpackaged/main/default/objects/Quote/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>Copy from Oppty Payment_Term__c</description>
    <label>Payment Term</label>
    <length>50</length>
    <type>Text</type>
</CustomField>