unpackaged/main/default/objects/Quote/fields/Payment_Time__c.field-meta.xml
<CustomField>
    <fullName>Payment_Time__c</fullName>
    <label>Payment Time</label>
    <type>DateTime</type>
</CustomField>