unpackaged/main/default/objects/Quote/fields/PDF_File__c.field-meta.xml
<CustomField>
    <fullName>PDF_File__c</fullName>
    <formula>IF( Document_Id__c == null , &#39;&#39;, HYPERLINK(&#39;/servlet/servlet.FileDownload?file=&#39; + Document_Id__c , Name + &#39;.pdf&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NetSuite PDF File</label>
    <type>Text</type>
</CustomField>