unpackaged/main/default/objects/Quote/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ad Credit</fullName>
            </value>
            <value>
                <fullName>Prime Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>