unpackaged/main/default/objects/Quote/fields/Project_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Project_Opportunity_Amount__c</fullName>
    <label>Project Opportunity Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>