unpackaged/main/default/objects/Quote/fields/Push_Counter__c.field-meta.xml
<CustomField>
    <fullName>Push_Counter__c</fullName>
    <label>Push Counter</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>