unpackaged/main/default/objects/Quote/fields/Pushed_From_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>Pushed_From_NetSuite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pushed From NetSuite</label>
    <type>Checkbox</type>
</CustomField>