unpackaged/main/default/objects/Quote/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <displayFormat>PGQ-{YY}{000000}</displayFormat>
    <label>Quote Number</label>
    <type>AutoNumber</type>
</CustomField>