unpackaged/main/default/objects/Quote/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2C - Standard</fullName>
            </value>
            <value>
                <fullName>B2C - Upgrade</fullName>
            </value>
            <value>
                <fullName>B2C - Renewal</fullName>
            </value>
            <value>
                <fullName>B2C - Conversion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>