unpackaged/main/default/objects/Quote/fields/Re_print_Contract__c.field-meta.xml
<CustomField>
    <fullName>Re_print_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-print Contract</label>
    <type>Checkbox</type>
</CustomField>