unpackaged/main/default/objects/Quote/fields/Required_Approval__c.field-meta.xml
<CustomField>
    <fullName>Required_Approval__c</fullName>
    <formula>IF( TEXT(Status) = &quot;Accepted&quot;, &quot;-&quot;, IF(AND(ISBLANK(Required_FOC_Approval__c),ISBLANK(Required_Managerial_Approval__c)),&quot;OMC&quot;,Required_FOC_Approval__c+Required_Managerial_Approval__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Approval</label>
    <type>Text</type>
</CustomField>