unpackaged/main/default/objects/Quote/fields/Required_Managerial_Approval__c.field-meta.xml
<CustomField>
    <fullName>Required_Managerial_Approval__c</fullName>
    <formula>IF(and(to_Managerial_Approval__c=true,Managerial_Approved__c=false),&quot;Managerial; &quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Managerial Approval</label>
    <type>Text</type>
</CustomField>